fix settings modal overlap on album page

--- a/index.less
+++ b/index.less
@@ -1257,8 +1257,9 @@ select.md-select {
 .settings-panel {
     background     : rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(16px);
-
+    z-index: 35;
     .settings-window {
+        
         .tabs .tab-content {
             .md-option-header {
                 padding-bottom: 1rem;
